--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -1,7 +1,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/qiuji_bg"
+    android:background="@drawable/img_index_bg"
     android:orientation="vertical">
 
     <!--<com.putao.widget.gif.GifView-->
@@ -21,6 +21,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:layout_marginTop="@dimen/dimens_20dp"
             android:padding="10dp">
 
 
@@ -36,22 +37,22 @@
                 android:textSize="@dimen/dimens_20dp"
                 android:visibility="invisible" />
 
-            <ImageView
-                android:layout_width="120dp"
-                android:layout_height="30dp"
-                android:layout_centerVertical="true"
-                android:src="@drawable/home_logo" />
-
-
             <Button
                 android:id="@+id/menu_home_setting_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentTop="true"
                 android:layout_marginRight="5dp"
-                android:background="@drawable/photograph_set" />
+                android:background="@drawable/selector_to_camera" />
+
+            <ImageView
+                android:layout_below="@id/menu_home_setting_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:layout_centerHorizontal="true"
+                android:src="@drawable/img_index_logo" />
 
         </RelativeLayout>
 
@@ -59,6 +60,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
+            android:layout_marginTop="@dimen/dimens_20dp"
             android:orientation="horizontal">
 
             <RelativeLayout
@@ -66,19 +68,18 @@
                 android:layout_height="wrap_content"
                 android:padding="10dp">
 
-
                 <Button
                     android:id="@+id/menu_home_material_btn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/menu_home_material" />
+                    android:background="@drawable/img_index_01" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/menu_home_material_btn"
                     android:layout_centerHorizontal="true"
-                    android:text="最新素材"
+                    android:text="素材中心"
                     android:textColor="@color/text_color_dark_626262"
                     android:textSize="@dimen/dimens_16dp"></TextView>
 
@@ -87,26 +88,28 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="0dp"
                     android:layout_marginTop="0dp"
+                    android:visibility="gone"
                     android:src="@drawable/home_tips_new" />
             </RelativeLayout>
 
             <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="30dp"
                 android:padding="10dp">
 
                 <Button
                     android:id="@+id/menu_home_camera_btn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/menu_home_camera" />
+                    android:background="@drawable/img_index_02" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/menu_home_camera_btn"
                     android:layout_centerHorizontal="true"
-                    android:text="美宝相机"
+                    android:text="葡萄时光"
                     android:textColor="@color/text_color_dark_626262"
                     android:textSize="@dimen/dimens_16dp"
 
@@ -132,14 +135,14 @@
                     android:id="@+id/menu_home_stickers_btn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/menu_home_stickers" />
+                    android:background="@drawable/img_index_03" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/menu_home_stickers_btn"
                     android:layout_centerHorizontal="true"
-                    android:text="童趣美化"
+                    android:text="意见反馈"
                     android:textColor="@color/text_color_dark_626262"
                     android:textSize="@dimen/dimens_16dp"
 
@@ -149,20 +152,21 @@
             <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="30dp"
                 android:padding="10dp">
 
                 <Button
                     android:id="@+id/menu_home_jigsaw_btn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/menu_home_jigsaw" />
+                    android:background="@drawable/img_index_04" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/menu_home_jigsaw_btn"
                     android:layout_centerHorizontal="true"
-                    android:text="萌萌拼图"
+                    android:text="关于我们"
                     android:textColor="@color/text_color_dark_626262"
                     android:textSize="@dimen/dimens_16dp"
 
@@ -173,6 +177,7 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:visibility="gone"
             android:layout_gravity="center_horizontal">
 
             <RelativeLayout
@@ -221,6 +226,31 @@
                     ></TextView>
             </RelativeLayout>
         </LinearLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:layout_marginBottom="@dimen/dimens_20dp"
+        android:paddingLeft="@dimen/dimens_20dp"
+        android:gravity="center_vertical">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:scaleType="centerInside"
+            android:src="@drawable/img_head_signup"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:textSize="18sp"
+            android:textColor="#e75c5c"
+            android:text="登录葡萄账户"/>
+
     </LinearLayout>
 
 </FrameLayout>
