--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -33,6 +33,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#00000000"
+        android:gravity="center_vertical"
         android:orientation="horizontal" >
 
         <LinearLayout
@@ -45,7 +46,6 @@
                 android:id="@+id/back_home_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
                 android:background="@drawable/icon_back_index" />
         </LinearLayout>
 
@@ -175,7 +175,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:background="@android:color/white"
+        android:background="#00000000"
         android:gravity="center_vertical"
         android:orientation="vertical">
 
@@ -188,7 +188,6 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#00000000"
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
@@ -233,7 +232,7 @@
                     android:background="@drawable/film_favorite" />
             </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
 
+    </LinearLayout>
 
 </RelativeLayout>
