--- a/app/src/main/res/layout/layout_flash_mode_selector.xml
+++ b/app/src/main/res/layout/layout_flash_mode_selector.xml
@@ -1,28 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:background="@drawable/flash_switch_bg">
-
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:background="#000000"
+              android:padding="15dp"
+              android:gravity="center_horizontal"
+              android:orientation="vertical">
 
     <Button
         android:id="@+id/flash_auto_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/camera_flash_auto" />
-
-    <Button
-        android:id="@+id/flash_on_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/camera_flash_on_1" />
+        android:background="@drawable/icon_capture_20_01"/>
 
     <Button
         android:id="@+id/flash_off_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/camera_flash_off" />
+        android:layout_marginTop="10dp"
+        android:background="@drawable/icon_capture_20_02"/>
+
+    <Button
+
+        android:id="@+id/flash_on_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/icon_capture_20_03"/>
+
+    <Button
+        android:id="@+id/flash_light_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/icon_capture_20_04"/>
 
 </LinearLayout>
