--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -157,7 +157,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/camera_sticker_bg"
-        android:visibility="invisible">
+        android:visibility="gone">
 
         <HorizontalScrollView
             android:id="@+id/scroll_sticker"
