--- a/app/src/main/res/layout/popup_timer_item.xml
+++ b/app/src/main/res/layout/popup_timer_item.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/img_timer"
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
+           android:layout_width="match_parent"
+           android:layout_height="match_parent"
+           android:layout_margin="10dp"
            android:scaleType="centerInside">
 
 </ImageView>
