--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -11,32 +11,22 @@
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"/>
+        android:layout_centerInParent="true" />
 
-    <!--<android.support.v4.view.ViewPager-->
-    <!--android:id="@+id/water_mark_scene_view_pager"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="match_parent" />-->
-
-    <!--<com.putao.camera.welcome.view.AutoScrollViewPagerCirclePageIndicator xmlns:pi="http://schemas.android.com/apk/res-auto"-->
-    <!--android:id="@+id/indicator"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_alignParentBottom="true"-->
-    <!--android:layout_marginBottom="120dp"-->
-    <!--android:padding="5dp"-->
-    <!--pi:fillColor="#FF330066"-->
-    <!--pi:pageColor="#FF9980B3"-->
-    <!--pi:strokeWidth="0dp" />-->
+    <com.putao.camera.camera.view.AnimationImageView
+        android:id="@+id/animation_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone" />
 
     <LinearLayout
         android:id="@+id/camera_top_rl"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@android:color/black"
-        android:paddingTop="20dp"
+        android:orientation="horizontal"
         android:paddingBottom="20dp"
-        android:orientation="horizontal" >
+        android:paddingTop="20dp">
 
         <LinearLayout
             android:layout_width="0dp"
@@ -134,8 +124,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:visibility="gone"
-        android:layout_above="@+id/bar">
+        android:layout_above="@+id/bar"
+        android:visibility="gone">
 
         <Button
             android:id="@+id/btn_enhance_switch"
@@ -146,27 +136,6 @@
             android:background="@drawable/button_enhance_off" />
     </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/layout_sticker"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/camera_sticker_bg"
-        android:visibility="gone">
-
-        <HorizontalScrollView
-            android:id="@+id/scroll_sticker"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:scrollbars="none">
-
-            <LinearLayout
-                android:id="@+id/layout_sticker_list"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"></LinearLayout>
-
-        </HorizontalScrollView>
-    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/bar"
@@ -176,12 +145,6 @@
         android:background="@android:color/black"
         android:gravity="center_vertical"
         android:orientation="vertical">
-
-        <!--<com.putao.camera.camera.view.WaterMarkSceneMenuView-->
-        <!--android:id="@+id/water_mark_scene_menu_view"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="0dp"-->
-        <!--android:layout_weight="1" />-->
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -232,4 +195,55 @@
         </LinearLayout>
     </LinearLayout>
 
+    <!--下方横向滚动的sticker列表-->
+    <LinearLayout
+        android:id="@+id/layout_sticker"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:background="#000000"
+        android:orientation="vertical">
+
+        <HorizontalScrollView
+            android:id="@+id/scroll_sticker"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:scrollbars="none">
+
+            <LinearLayout
+                android:id="@+id/layout_sticker_list"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"></LinearLayout>
+
+        </HorizontalScrollView>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btn_close_ar_list"
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:layout_weight="1"
+                android:background="#000000"
+                android:text="V"
+                android:textColor="#dddddd" />
+
+            <View
+                android:layout_width="1dp"
+                android:layout_height="match_parent"
+                android:background="#333333" />
+
+            <Button
+                android:id="@+id/btn_clear_ar"
+                android:layout_width="100dp"
+                android:layout_height="30dp"
+                android:background="#000000"
+                android:text="清除"
+                android:textColor="#dddddd" />
+        </LinearLayout>
+    </LinearLayout>
 </RelativeLayout>
