--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -103,4 +103,14 @@
     </declare-styleable>
 
 
+    <!--opencv 使用-->
+    <declare-styleable name = "CameraBridgeViewBase" >
+        <attr name="show_fps" format="boolean"/>
+        <attr name="camera_id" format="integer" >
+            <enum name="any" value="-1" />
+            <enum name="back" value="99" />
+            <enum name="front" value="98" />
+        </attr>
+    </declare-styleable>
+
 </resources>
