--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -102,7 +102,7 @@
                     android:id="@+id/menu_home_camera_btn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/img_index_02" />
+                    android:background="@drawable/img_index_05_176" />
 
                 <TextView
                     android:layout_width="wrap_content"
