--- a/app/src/main/res/layout/layout_management_water_mark_grid_item.xml
+++ b/app/src/main/res/layout/layout_management_water_mark_grid_item.xml
@@ -13,7 +13,8 @@
         <com.putao.camera.editor.view.FilterEffectThumbnailView
             android:id="@+id/water_mark_photo_download_iv"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+             />
 
         <ProgressBar
             android:id="@+id/download_status_pb"
