--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -111,6 +111,7 @@
         android:id="@+id/tv_takephoto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:visibility="gone"
         android:layout_below="@+id/camera_top_rl"
         android:layout_above="@+id/bar"/>
 
@@ -119,14 +120,14 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_below="@id/camera_top_rl"
-        android:background="@color/color_eeefea" />
-
+        android:background="@color/black" />
+    <!--android:background="@color/color_eeefea"-->
     <View
         android:id="@+id/fill_blank_bottom"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_above="@+id/bar"
-        android:background="@color/color_eeefea" />
+        android:background="@color/black" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -168,12 +169,12 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center">
-
+                <!--android:background="@drawable/photo_button_album"-->
                 <com.putao.camera.camera.view.AlbumButton
                     android:id="@+id/album_btn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/photo_button_album" />
+                     />
             </LinearLayout>
             <LinearLayout
                 android:layout_width="0dp"
@@ -195,8 +196,8 @@
                 android:gravity="center">
                 <Button
                     android:id="@+id/take_photo_btn"
-                    android:layout_width="53dp"
-                    android:layout_height="53dp"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:background="@drawable/btn_capture_nor"
                     android:textColor="@color/white"
                     android:textSize="@dimen/dimens_24sp" />
