--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -297,7 +297,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#dd000000"
-        android:visibility="visible">
+        android:visibility="gone">
 
         <LinearLayout
             android:layout_width="match_parent"
