--- a/app/src/main/res/layout/activity_photo_share.xml
+++ b/app/src/main/res/layout/activity_photo_share.xml
@@ -70,7 +70,8 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@id/save_tips"
                     android:layout_margin="10dp"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:visibility="gone">
 
                     <LinearLayout
                         android:layout_width="match_parent"
