--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -296,12 +296,19 @@
         </LinearLayout>
     </LinearLayout>
 
-    <RelativeLayout
+    <ImageView
+        android:visibility="gone"
+        android:id="@+id/Tips"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/img_tips_fullscreen01"/>
+
+   <!-- <RelativeLayout
         android:id="@+id/Tips"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#dd000000"
-        android:visibility="gone">
+        android:visibility="visible">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -415,7 +422,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="center">
-                    <!--android:background="@drawable/photo_button_album"-->
+                    &lt;!&ndash;android:background="@drawable/photo_button_album"&ndash;&gt;
                     <com.putao.camera.camera.view.AlbumButton
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
@@ -468,24 +475,41 @@
             android:layout_marginTop="320dp"
             android:background="@drawable/img_tips_iknow" />
 
-        <ImageView
-            android:id="@+id/iv_inter"
+        &lt;!&ndash;android:layout_marginRight="30dp"&ndash;&gt;
+       &lt;!&ndash; <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_above="@+id/btn_bottom"
+            android:weightSum="5"
             android:layout_marginBottom="@dimen/dimens_5dp"
-            android:layout_marginRight="30dp"
-            android:background="@drawable/img_tips_02"
-            android:visibility="visible" />
+            >
+
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="3" />&ndash;&gt;
+
+            <ImageView
+                android:layout_above="@+id/btn_bottom"
+                android:id="@+id/iv_inter"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/img_tips_02"
+                android:visibility="visible" />
+            &lt;!&ndash;<ImageView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+        </LinearLayout>&ndash;&gt;
 
         <com.putao.camera.camera.view.RedPointBaseButton
             android:id="@+id/btn_bottom"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_above="@+id/page"
-            android:layout_marginLeft="132dp"
             android:layout_marginBottom="-10dp"
+            android:layout_marginLeft="132dp"
             android:src="@drawable/icon_capture_20_15" />
 
-    </RelativeLayout>
+    </RelativeLayout>-->
 </RelativeLayout>
