关于我们时间修改

--- a/app/src/main/res/layout/activity_logo.xml
+++ b/app/src/main/res/layout/activity_logo.xml
@@ -7,7 +7,9 @@
         android:id="@+id/image_loading"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/loading" />
+        android:background="@drawable/loading"
+
+         />
 
 
     <ImageView
