--- a/app/src/main/res/layout/layout_toaster.xml
+++ b/app/src/main/res/layout/layout_toaster.xml
@@ -1,7 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/toast_hint_bg"
+    android:background="@drawable/com_tip"
     android:padding="10dp">
 
     <ImageView
@@ -21,7 +21,8 @@
         android:layout_below="@id/toast_img"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="5dp"
-        android:textColor="#FFD46000"
+        android:textColor="#FFffffff"
+        android:text="5555"
         android:textSize="16sp" />
 
 </RelativeLayout>
